src/pmt/css/PreferencesManagementTool.css
@font-face {
	font-family: 'cursor-pointer-icon';
	src:url('../fonts/cursor-pointer-icon.ttf') format('truetype');
	font-weight: normal;
	font-style: normal;
}

.fl-icon-cursor-icons {
	float: left;
	font-family: 'cursor-pointer-icon';
	speak: none;
	font-style: normal;
	font-weight: normal;
	font-variant: normal;
	text-transform: none;
	line-height: 1;
	-webkit-font-smoothing: antialiased;
}
.fl-icon-small-cursor:before {
	font-size: 0.8em !important;
	content: "\e000";
}
.fl-icon-big-cursor:before {
	font-size: 1.9em !important;
	content: "\e000";
}

.fl-icon-big-cursor {
	margin-top: -0.5em !important;
}

.preference {
	background:#ECEFEF;
	width: 340px;
}

.adjusterGroupTitle {
	margin: 5px;
}

.fl-uiOptions-category {
    width: 80%;
    margin: 0 auto;
    font-family: 'Open Sans', sans-serif;
}

.fl-uiOptions .fl-slider-horz {
    width: 15em;
}

.fl-uiOptions label::first-letter {
    text-transform: capitalize;
}

.fl-uiOptions .fl-slider a {
    background: radial-gradient(circle 14.5px at 14.5px 50%, #566374 6px, white 8px);
    border: 1px solid #566374;
}

.fl-uiOptions .ui-slider-range {
    background-color: #17a9b8;
}

.headerImage {
	position: relative; 
   	width: 100%; /* for IE 6 */
   	font-family: 'Roboto Slab', serif;
}

.headerTitle {
	//position: absolute; 
   	//top: 20px; 
   	left: 0; 
   	width: 100%;
   	color: white;
   	text-align: center;
}

.fl-uiOptions label {
    font-size: 0.8em;
}

.fl-uiOptions .fl-slider a {
    box-shadow: none;
}

.flc-uiOptions-plus-minus-numerical-minus, .flc-uiOptions-plus-minus-numerical-plus {
	width: 10% !important;
	height: 25px !important;
	font-size: 20px !important;
	cursor: pointer;
	text-align: center !important;
	background-color: white;
	margin-left: 2px !important;
	margin-right: 2px !important;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-o-user-select: none;
	user-select: none;
}

.flc-uiOptions-plus-minus-numerical-widget {
	width: 100% !important;
	background-color: #FFFFFF;
    height: 25px;
}

.flc-uiOptions-plus-minus-numerical-value {
	width: 76% !important;
	border: none !important;
	height: 25px !important;
	text-align: center !important;
}

input[type=checkbox] {
    position: absolute;
    display: none;
    clip: rect(0 0 0 0);
    height:1px;
    width:1px;
    margin:-1px;
    padding:0;
    border:0;
}

input[type=checkbox] + label.headerTitle {
    background: url('../images/increaseSizeHeader.png') no-repeat;
    background-size:330px 90px;
    //padding-left:30px;
    cursor:pointer;
    margin: 5px;
    font-size: 1.5em;
    text-align: center;
    //padding-left: 3px;
    color:white;
    display:inline-block;
    line-height:90px;
    height: 90px;
    width:330px;
}

input[type=checkbox]:checked + label.headerTitle {
    background: url('../images/increaseSizeHeaderChecked.png') no-repeat;
    background-size:330px 90px;
    //padding-left:30px;
    cursor:pointer;
    margin: 5px;
    font-size: 1.5em;
    text-align: center;
    //padding-left: 3px;
    color:white;
    display:inline-block;
    line-height:90px;
    height: 90px;
    width:330px;
}

